Bug 670106 - Check the surface type before attempting to create a GLXPixmap. r=joe